force-app/main/default/objects/GroupCensusMember/GroupCensusMember.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>