force-app/main/default/objects/GroupCensusMember/fields/vlocity_ins_fsc__AttributeSelectedValues__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__AttributeSelectedValues__c</fullName>
    <label>Attribute Selected Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>