force-app/main/default/objects/GroupCensusMember/fields/vlocity_ins_fsc__SpecProduct2Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__SpecProduct2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Group Census Member</relationshipLabel>
    <relationshipName>GroupCensusMembersStd</relationshipName>
    <type>Lookup</type>
</CustomField>