force-app/main/default/objects/GroupCensusMember/fields/ZRH_CapitalVidaVoluntario__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CapitalVidaVoluntario__c</fullName>
    <label>Capital Vida Voluntario</label>
    <precision>17</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>