force-app/main/default/objects/GroupCensusMember/fields/ZRH_ClaveSincronizacion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ClaveSincronizacion__c</fullName>
    <externalId>true</externalId>
    <label>Clave de sincronizacion</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>