force-app/main/default/objects/GroupCensusMember/fields/ZRH_ExclusionRealizada__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ExclusionRealizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica si el asegurado ya fue excluido de la póliza</description>
    <label>Exclusión Realizada</label>
    <type>Checkbox</type>
</CustomField>