force-app/main/default/objects/GroupCensusMember/fields/ZRH_FechaConversionCapital__c.field-meta.xml
<CustomField>
    <fullName>ZRH_FechaConversionCapital__c</fullName>
    <label>Fecha conversion capital</label>
    <type>Date</type>
</CustomField>