force-app/main/default/objects/GroupCensusMember/fields/ZRH_FechaExclusion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_FechaExclusion__c</fullName>
    <label>Fecha Exclusión</label>
    <type>Date</type>
</CustomField>