force-app/main/default/objects/GroupCensusMember/fields/ZRH_InclusionRealizada__c.field-meta.xml
<CustomField>
    <fullName>ZRH_InclusionRealizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica si el asegurado ya fue inscripto.</description>
    <label>Inclusión Realizada</label>
    <type>Checkbox</type>
</CustomField>