force-app/main/default/objects/GroupCensusMember/fields/ZRH_NumeroCuentaBancaria__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NumeroCuentaBancaria__c</fullName>
    <label>Numero de cuenta bancaria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>