force-app/main/default/objects/GroupCensusMember/fields/ZRH_NumeroRentas__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NumeroRentas__c</fullName>
    <label>Número de Rentas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>