force-app/main/default/objects/GroupCensusMember/fields/ZRH_NumeroTelefonoAlternativo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NumeroTelefonoAlternativo__c</fullName>
    <label>Número de teléfono alternativo</label>
    <type>Phone</type>
</CustomField>