force-app/main/default/objects/GroupCensusMember/fields/ZRH_Poliza__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Poliza__c</fullName>
    <description>Indica la poliza a la que el miembro esta relacionado. El campo se carga con el folio mas el periodo</description>
    <label>Póliza</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>