force-app/main/default/objects/GroupCensusMember/fields/ZRH_RunID__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RunID__c</fullName>
    <label>Run Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>