force-app/main/default/objects/GroupCensusMember/fields/ZRH_Rut__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Rut__c</fullName>
    <label>Rut</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>