force-app/main/default/objects/GroupCensusMember/fields/ZRH_TipoMovimiento__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoMovimiento__c</fullName>
    <label>Tipo de movimiento</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inclusión</fullName>
            </value>
            <value>
                <fullName>Exclusión</fullName>
            </value>
            <value>
                <fullName>Modificación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>