force-app/main/default/objects/GroupCensusMember/fields/ZRH_VigenciaHistorica__c.field-meta.xml
<CustomField>
    <fullName>ZRH_VigenciaHistorica__c</fullName>
    <label>Vigencia Historica</label>
    <required>true</required>
    <type>Date</type>
</CustomField>