force-app/main/default/objects/GroupCensusMember/validationRules/ZRH_DependienteEsExclusionSiTitularEsExc.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_DependienteEsExclusionSiTitularEsExc</fullName>
    <active>true</active>
    <description>Si el titular es marcado como tipo movimiento exclusion el dependiente no puede tener otro tipo de movimiento.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(PrimaryGroupCensusMember.ZRH_TipoMovimiento__c, 
  &quot;Exclusión&quot;),
  NOT(ISPICKVAL(ZRH_TipoMovimiento__c, &quot;Exclusión&quot;))
)</errorConditionFormula>
    <errorMessage>Si el tipo movimiento del titular es Exclusión el del dependiente también debe serlo.</errorMessage>
</ValidationRule>