force-app/main/default/objects/GroupCensusMember/validationRules/ZRH_FechaExclusionReqEnExclusion.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_FechaExclusionReqEnExclusion</fullName>
    <active>true</active>
    <description>La fecha de exclusion es requerida en la exclusion</description>
    <errorConditionFormula>AND(
  ISPICKVAL(ZRH_TipoMovimiento__c, &quot;Exclusión&quot;),
  ISNULL(ZRH_FechaExclusion__c) 
)</errorConditionFormula>
    <errorMessage>El tipo de movimiento Exclusión debe tener una fecha de exclusión definida</errorMessage>
</ValidationRule>