force-app/main/default/objects/GroupCensusMember/validationRules/ZRH_FechaInclusionReqEnInclusion.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_FechaInclusionReqEnInclusion</fullName>
    <active>true</active>
    <description>La fecha de inclusion es requerida en la inclusion</description>
    <errorConditionFormula>AND(
ISPICKVAL(ZRH_TipoMovimiento__c, &quot;Inclusión&quot;),
ISNULL(PolicyStartDate)
)</errorConditionFormula>
    <errorMessage>El tipo de movimiento Inclusión debe tener una fecha de inclusión definida</errorMessage>
</ValidationRule>